Connect blackjack engine to service layer